# tree-sitter-sysml

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  coverage.yml
bindings/c/: tree-sitter-sysml.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sysml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSysMLTests/: TreeSitterSysMLTests.swift
docs/: known-issues.md  parse-coverage.md  prd-pre-submission.md
examples/: requirements.sysml  state-machine.sysml  use-cases.sysml  vehicle.sysml  verification.sysml
playground/: index.html
queries/: folds.scm  highlights.scm  indents.scm  locals.scm  tags.scm
scripts/: check-test-count.sh  fetch-corpora.sh  test-corpus.sh  validate-external.sh  validate-training.js
src/: grammar.json  node-types.json
test/corpus/: actions.txt  attributes.txt  calculations.txt  connections.txt  constraints.txt  definitions.txt  expressions.txt  flows.txt  metadata.txt  packages.txt  requirements.txt  states.txt  successions.txt  usages.txt  views.txt
test/invalid/: README.md  run_tests.sh
test/invalid/structural/: action_in_enum.sysml  def_inside_usage.sysml  entry_in_part.sysml  fork_in_requirement.sysml  (+2 more)
(+12 files in other folders)
