[package]
name = "tree-sitter-sysml"
description = "SysML v2 grammar for tree-sitter"
version = "0.1.0"
authors = ["Andrew Dunn <andrew@dunn.dev>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sysml", "systems-engineering"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://gitlab.com/nomograph/tree-sitter-sysml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["/LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.24"
